Assignments/Assignment_2/strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: dso202-assignment-02
spec:
  stripPrefix:
    prefixes:
      - /api
